solved the wretched growing animation on ios! Add probability map for growing seeds (lower number of seeds means higher chance of growing)

--- a/public/external.css
+++ b/public/external.css
@@ -1,46 +1,3 @@
-@keyframes grow-seed {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-    background: #78C143;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  70% {
-    opacity: 0;
-    transform: scale(4);
-    background: #78C143;
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  71% {
-    opacity: 1;
-    transform: scale(0.1);
-    background: url(img/seed.svg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  85% {
-    opacity: 1;
-    transform: scale(1.3);
-    background: url(img/seed.svg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-  100% {
-    opacity: 1;
-    transform: scale(1);
-    background: url(img/seed.svg);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-}
-
 .pod {
   background: url(img/seed.svg);
   background-position: center;
