--- a/src/scss/_customAnimations.scss
+++ b/src/scss/_customAnimations.scss
@@ -18,6 +18,22 @@
   animation-fill-mode: forwards;
 }
 
+@keyframes doubleElasticBounceIn {
+  0% { transform: scale(0) }
+  20% { transform: scale(0.5) }
+  36% { transform: scale(1.5) }
+  52% { transform: scale(0.8) }
+  68% { transform: scale(1.2) }
+  84% { transform: scale(0.9) }
+  100% { transform: scale(1) }
+}
+
+@keyframes elasticBounceIn {
+  0% { transform: scale(0) }
+  50% { transform: scale(1.3) }
+  100% { transform: scale(1) }
+}
+
 @for $i from 1 through 12 {
   $d: $i / 2;
   .duration-#{$d} {
